Register method etc.

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
 
     <div class="form-check">
         <input type="checkbox" id="owner_role" class="form-check-input" name="roleName" value="ROLE_OWNER">
-        <label for="owner_role" class="form-check-label">Do you want a tenant Role?</label>
+        <label for="owner_role" class="form-check-label">Do you want a owner Role?</label>
     </div>
 
 
