--- a/src/main/resources/templates/ApplicationForRegistrationPage.html
+++ b/src/main/resources/templates/ApplicationForRegistrationPage.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registration Page</title>
 </head>
 <body>
-
+ HELOOOOO
 </body>
 </html>
