--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -9,7 +9,7 @@
     <div th:insert="header :: header"></div>
 
     <h1>Home</h1>
-    <span>Check out <a href="/estate">Estates</a> and <a href="/applications">Applications</a> ma Nigga</span>
+    <span>Check out <a href="/estate">Estates</a> and <a href="/applications">Applications</a> </span>
 
 </body>
 </html>
