--- a/src/main/resources/templates/ApplicationPage.html
+++ b/src/main/resources/templates/ApplicationPage.html
@@ -8,8 +8,8 @@
     <h1>
         Application Page Navigation
     </h1>
-    <span>Here is the <a href="/applications/rental">Rental Application</a> Nigga</span><br>
-    <span>Here is the <a href="/applications/view">View Application</a> Nigga</span><br>
-`   <span>Here is the <a href="/applications/registration">Registration Application</a> Nigga</span><br>
+    <span>Here is the <a href="/applications/rental">Rental Application</a> </span><br>
+    <span>Here is the <a href="/applications/view">View Application</a> </span><br>
+`   <span>Here is the <a href="/applications/registration">Registration Application</a> </span><br>
 </body>
 </html>
