Front end 1st commit

--- a/src/main/resources/templates/AddApplicationForRegistrationPage.html
+++ b/src/main/resources/templates/AddApplicationForRegistrationPage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="#" th:action="@{applications/registration/new}" th:object="${application}" method="post">
+    <form th:action="@{/applications/registration/new}" th:object="${application}" method="post">
 
 
     <div class="form-group">
