--- a/src/main/resources/templates/ApplicationForView.html
+++ b/src/main/resources/templates/ApplicationForView.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>ApplicationForRegistrationPage</title>
+    <title>ApplicationForView</title>
     <link rel="stylesheet" th:href="@{/css/nicepage.css}" media="screen">
-<link rel="stylesheet" th:href="@{/css/ApplicationForRegistrationPage.css}" media="screen">
+<link rel="stylesheet" th:href="@{/css/ApplicationForView.css}" media="screen">
     <script class="u-script" type="text/javascript" th:src="@{/js/jquery.js}" defer=""></script>
     <script class="u-script" type="text/javascript" th:src="@{/js/nicepage.js}" defer=""></script>
     <meta name="generator" content="Nicepage 7.2.3, nicepage.com">
@@ -23,7 +23,7 @@
 		"sameAs": []
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="ApplicationForRegistrationPage">
+    <meta property="og:title" content="ApplicationForView">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
@@ -68,106 +68,41 @@
                 }</style>
         </nav>
       </div></header>
-    <section class="u-clearfix u-image u-section-1" id="sec-697a">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-clearfix u-image u-section-1" id="sec-4999">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-center u-container-align-center u-container-style u-group u-radius-50 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <span class="u-file-icon u-icon u-icon-circle u-palette-1-light-1 u-text-white u-icon-1">
-              <img th:src="@{images/149288-abbd049d.png}" alt="">
+              <img th:src="@{images/149099-e4ea8095.png}" alt="">
             </span>
-            <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">New Application</h3>
-            <div class="u-form u-login-control u-radius u-white u-form-1">
-              <form th:action="@{applications/registration/new}" th:object="${application}" class="u-clearfix u-form-custom-backend u-form-spacing-15 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 36px;" method="post">
-                <div class="u-form-group u-form-partition-factor-2 u-form-group-1">
-                  <label for="text-292f" class="u-label">Address *</label>
-                  <input type="text" th:field="*{address}" id="documents" placeholder="Enter Your Address" id="text-292f" name="text-1" class="u-grey-5 u-input u-input-rectangle u-radius u-input-1" required="required">
+            <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"> New Application</h3>
+            <div class="u-form u-login-control u-white u-form-1">
+              <form th:action="@{/applications/view}" th:object="${application}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
+                  <input type="hidden" th:field="*{tenant.id}" />
+                <div class="u-form-group u-form-name">
+                  <label for="username-a30d" class="u-label">Estate Code *</label>
+                  <input type="text" th:field="*{estateCode}" placeholder="Enter the Estate Code" id="username-a30d" name="username" class="u-grey-5 u-input u-input-rectangle u-radius u-input-1" required="">
                 </div>
-                <div class="u-form-group u-form-partition-factor-2 u-form-password">
-                  <label for="password-a30d" class="u-label">Area *</label>
-                  <input type="text" th:field="*{area}" placeholder="Enter your Password" id="password-a30d" name="password" class="u-grey-5 u-input u-input-rectangle u-radius u-input-2" required="">
+                <div class="u-form-group u-form-password">
+                  <label for="password-a30d" class="u-label">Tenant Code *</label>
+                  <input type="text" th:field="*{tenantCode}" placeholder="Enter the Tenant Code" id="password-a30d" name="password" class="u-grey-5 u-input u-input-rectangle u-radius u-input-2" required="">
                 </div>
-                <div class="u-form-group u-form-partition-factor-2 u-form-group-3" data-dependency="[{&quot;action&quot;:&quot;show&quot;,&quot;field&quot;:&quot;username&quot;,&quot;condition&quot;:&quot;equal&quot;,&quot;value&quot;:&quot;&quot;}]">
-                  <label for="text-2086" class="u-label">Floor *</label>
-                  <input type="text"  th:field="*{floor}" id="text-2086" name="text" class="u-grey-5 u-input u-input-rectangle u-radius u-input-3" required="required" placeholder="Enter your Email">
+                <div class="u-form-date u-form-group u-form-group-3">
+                  <label for="date-ed38" class="u-label">Date Of Visit</label>
+                  <input type="text" th:field="*{dateOfVisit}" placeholder="MM/DD/YYYY" id="date-ed38" name="date" class="u-grey-5 u-input u-input-rectangle u-radius u-input-3" required="" data-date-format="mm/dd/yyyy">
                 </div>
-                <div class="u-form-group u-form-name u-form-partition-factor-2">
-                  <label for="username-a30d" class="u-label">Amount Of Rooms *</label>
-                  <input type="text" th:field="*{amountOfRooms}" placeholder="Enter your Username" id="username-a30d" name="username" class="u-grey-5 u-input u-input-rectangle u-radius u-input-4" required="">
+                <div class="u-form-group u-form-textarea u-form-group-4">
+                  <label for="textarea-9dd2" class="u-label">Description</label>
+                  <textarea th:field="*{description}" rows="4" cols="50" id="textarea-9dd2" name="textarea" class="u-grey-5 u-input u-input-rectangle u-radius u-input-4" required=""></textarea>
                 </div>
-                <div class="u-form-group u-form-group-5">
-                  <label for="text-c2ef" class="u-label">Duration *</label>
-                  <input type="text" th:field="*{duration}" placeholder="Enter Your Rental Duration" id="text-c2ef" name="text-2" class="u-grey-5 u-input u-input-rectangle u-radius u-input-5" required="required">
-                </div>
-                <div class="u-form-group u-form-group-6">
-                  <label for="text-fd49" class="u-label">Properties</label>
-                  <input type="text" th:field="*{properties}" placeholder="Enter Your Estate Properties" id="text-fd49" name="text-4" class="u-grey-5 u-input u-input-rectangle u-radius u-input-6">
-                </div>
-                <div class="u-form-group u-form-group-7">
-                  <label for="text-f2df" class="u-label">Documents</label>
-                  <input type="text" placeholder="" th:field="*{documents}" id="text-f2df" name="text-3" class="u-grey-5 u-input u-input-rectangle u-radius u-input-7" >
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-8">
-                  <label for="range-4930" class="u-label">Price Per Month</label>
-                  <div class="u-input-row" data-value="100">
-                    <input value="100" th:field="*{price}" min="100" max="10000" step="1" type="range" placeholder="" id="range-4930" name="range" class="u-input u-range">
-                    <input type="number" th:field="*{price}" placeholder="" id="number-range-4930" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-9" min="100" max="10000" step="1" value="100">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-9">
-                  <label for="range-476d" class="u-label">Age Of Construction</label>
-                  <div class="u-input-row" data-value="2000">
-                    <input value="2000" th:field="*{ageOfConstruction}" min="1890" max="2025" step="1" type="range" placeholder="" id="range-476d" name="range-1" class="u-input u-range">
-                    <input type="number" th:field="*{ageOfConstruction}" placeholder="" id="number-range-476d" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-11" min="1890" max="2025" step="1" value="2000">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-10">
-                  <label for="range-9d19" class="u-label">Square Meters</label>
-                  <div class="u-input-row" data-value="10">
-                    <input value="10" th:field="*{squareMeters}" min="10" max="1000" step="10" type="range" placeholder="" id="range-9d19" name="range-2" class="u-input u-range">
-                    <input type="number" placeholder="" th:field="*{squareMeters}" id="number-range-9d19" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-13" min="10" max="1000" step="10" value="10">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-select u-form-group-11">
-                  <label for="select-32c6" class="u-label">Type of estate</label>
-                  <div class="u-form-select-wrapper">
-                    <select id="select-32c6" th:field="*{typeOfEstate}" name="select" class="u-grey-5 u-input u-input-rectangle u-radius u-input-14">
-                      <option value="Apartment" data-calc="Apartment">Apartment</option>
-                      <option value="Detached House" data-calc="Detached House">Detached House</option>
-                      <option value="Townhouse Estate" data-calc="Townhouse Estate">Townhouse Estate</option>
-                      <option data-calc="Condominium (Condo) Estate" value="Condominium (Condo) Estate">Condominium (Condo) Estate</option>
-                    </select>
-                    <svg class="u-caret u-caret-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="fill:currentColor;" xml:space="preserve"><polygon class="st0" points="8,12 2,4 14,4 "></polygon></svg>
-                  </div>
-                </div>
-                <div class="u-form-group u-form-select u-form-group-12">
-                  <label for="select-7b09" class="u-label">Type Of Heating</label>
-                  <div class="u-form-select-wrapper">
-                      <select id="select-7b09" th:field="*{typeOfHeating}" id="typeOfHeating" class="u-grey-5 u-input u-input-rectangle u-radius u-input-15">
-                          <option value="Central Heating">Central Heating</option>
-                          <option value="District Heating">District Heating</option>
-                          <option value="Electric Heating">Electric Heating</option>
-                          <option value="Individual Room Heating">Individual Room Heating</option>
-                      </select>
-                    <svg class="u-caret u-caret-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="fill:currentColor;" xml:space="preserve"><polygon class="st0" points="8,12 2,4 14,4 "></polygon></svg>
-                  </div>
-                </div>
-                <div class="u-form-checkbox u-form-group u-form-partition-factor-2 u-form-group-13">
-                  <input type="checkbox" th:field="*{parking}" id="checkbox" name="checkbox" value="On" class="u-field-input">
-                  <label for="checkbox" class="u-field-label">Parking</label>
-                </div>
-
-                <div class="u-form-group u-form-textarea u-form-group-15">
-                  <label for="textarea-538c" class="u-label">Description</label>
-                  <textarea rows="4" th:field="*{description}" cols="50" id="textarea-538c" name="textarea" class="u-grey-5 u-input u-input-rectangle u-radius u-input-16" required=""></textarea>
-                </div>
-
                 <div class="u-align-right u-form-group u-form-submit">
-                  <a href="#" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Login</a>
-                  <input type="submit" value="submit" class="u-form-control-hidden">
+                    <button type="submit" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Submit</button>
+                    <input type="submit" value="submit" class="u-form-control-hidden">
                 </div>
                 <input type="hidden" value="" name="recaptchaResponse">
               </form>
             </div>
+            <a href="#" class="u-border-active-palette-2-base u-border-hover-palette-1-base u-border-none u-btn u-button-style u-login-control u-login-create-account u-none u-text-grey-40 u-text-hover-palette-4-base u-btn-2">Don't have an account?</a>
           </div>
         </div>
       </div>
