--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>ApplicationForRegistrationPage</title>
-    <link rel="stylesheet" th:href="@{/css/nicepage.css}" media="screen">
-<link rel="stylesheet" th:href="@{/css/ApplicationForRegistrationPage.css}" media="screen">
-    <script class="u-script" type="text/javascript" th:src="@{/js/jquery.js}" defer=""></script>
-    <script class="u-script" type="text/javascript" th:src="@{/js/nicepage.js}" defer=""></script>
+    <title>Login</title>
+    <link rel="stylesheet" href="nicepage.css" th:href="@{/css/nicepage.css}" media="screen">
+<link rel="stylesheet" href="Login.css" th:href="@{/css/Login.css}" media="screen">
+    <script class="u-script" type="text/javascript"  th:src="@{/js/jquery.js}" defer=""></script>
+    <script class="u-script" type="text/javascript"  th:src="@{/js/nicepage.js}" defer=""></script>
     <meta name="generator" content="Nicepage 7.2.3, nicepage.com">
     
     
@@ -19,16 +19,16 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/black-logo-8_150.png",
+		"logo": "/images/black-logo-8_150.png",
 		"sameAs": []
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="ApplicationForRegistrationPage">
+    <meta property="og:title" content="Login">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+          <img  th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
@@ -68,106 +68,48 @@
                 }</style>
         </nav>
       </div></header>
-    <section class="u-clearfix u-image u-section-1" id="sec-697a">
+    <section class="u-clearfix u-image u-section-1" id="sec-6d1a">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-align-center u-container-style u-group u-radius-50 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
-            <span class="u-file-icon u-icon u-icon-circle u-palette-1-light-1 u-text-white u-icon-1">
-              <img th:src="@{images/149288-abbd049d.png}" alt="">
+            <span class="u-icon u-icon-circle u-palette-1-light-1 u-text-white u-icon-1">
+              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 60 60" style=""><use xlink:href="#svg-ccfe"></use></svg>
+              <svg class="u-svg-content" viewBox="0 0 60 60" x="0px" y="0px" id="svg-ccfe" style="enable-background:new 0 0 60 60;"><path d="M48.014,42.889l-9.553-4.776C37.56,37.662,37,36.756,37,35.748v-3.381c0.229-0.28,0.47-0.599,0.719-0.951
+	c1.239-1.75,2.232-3.698,2.954-5.799C42.084,24.97,43,23.575,43,22v-4c0-0.963-0.36-1.896-1-2.625v-5.319
+	c0.056-0.55,0.276-3.824-2.092-6.525C37.854,1.188,34.521,0,30,0s-7.854,1.188-9.908,3.53C17.724,6.231,17.944,9.506,18,10.056
+	v5.319c-0.64,0.729-1,1.662-1,2.625v4c0,1.217,0.553,2.352,1.497,3.109c0.916,3.627,2.833,6.36,3.503,7.237v3.309
+	c0,0.968-0.528,1.856-1.377,2.32l-8.921,4.866C8.801,44.424,7,47.458,7,50.762V54c0,4.746,15.045,6,23,6s23-1.254,23-6v-3.043
+	C53,47.519,51.089,44.427,48.014,42.889z M51,54c0,1.357-7.412,4-21,4S9,55.357,9,54v-3.238c0-2.571,1.402-4.934,3.659-6.164
+	l8.921-4.866C23.073,38.917,24,37.354,24,35.655v-4.019l-0.233-0.278c-0.024-0.029-2.475-2.994-3.41-7.065l-0.091-0.396l-0.341-0.22
+	C19.346,23.303,19,22.676,19,22v-4c0-0.561,0.238-1.084,0.67-1.475L20,16.228V10l-0.009-0.131c-0.003-0.027-0.343-2.799,1.605-5.021
+	C23.253,2.958,26.081,2,30,2c3.905,0,6.727,0.951,8.386,2.828c1.947,2.201,1.625,5.017,1.623,5.041L40,16.228l0.33,0.298
+	C40.762,16.916,41,17.439,41,18v4c0,0.873-0.572,1.637-1.422,1.899l-0.498,0.153l-0.16,0.495c-0.669,2.081-1.622,4.003-2.834,5.713
+	c-0.297,0.421-0.586,0.794-0.837,1.079L35,31.623v4.125c0,1.77,0.983,3.361,2.566,4.153l9.553,4.776
+	C49.513,45.874,51,48.28,51,50.957V54z"></path></svg>
             </span>
-            <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">New Application</h3>
-            <div class="u-form u-login-control u-radius u-white u-form-1">
-              <form th:action="@{applications/registration/new}" th:object="${application}" class="u-clearfix u-form-custom-backend u-form-spacing-15 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 36px;" method="post">
-                <div class="u-form-group u-form-partition-factor-2 u-form-group-1">
-                  <label for="text-292f" class="u-label">Address *</label>
-                  <input type="text" th:field="*{address}" id="documents" placeholder="Enter Your Address" id="text-292f" name="text-1" class="u-grey-5 u-input u-input-rectangle u-radius u-input-1" required="required">
+            <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">Welcome Back</h3>
+            <div class="u-form u-login-control u-white u-form-1">
+              <form th:action="@{/login}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
+                <div class="u-form-group u-form-name">
+                  <label for="username" class="u-label">Username *</label>
+                  <input type="text"  placeholder="Enter your Username" id="username" name="username" class="u-grey-5 u-input u-input-rectangle u-input-1" required="">
                 </div>
-                <div class="u-form-group u-form-partition-factor-2 u-form-password">
-                  <label for="password-a30d" class="u-label">Area *</label>
-                  <input type="text" th:field="*{area}" placeholder="Enter your Password" id="password-a30d" name="password" class="u-grey-5 u-input u-input-rectangle u-radius u-input-2" required="">
+                <div class="u-form-group u-form-password">
+                  <label for="password" class="u-label">Password *</label>
+                  <input type="password" placeholder="Enter your Password" id="password" name="password" class="u-grey-5 u-input u-input-rectangle u-input-2" required="">
                 </div>
-                <div class="u-form-group u-form-partition-factor-2 u-form-group-3" data-dependency="[{&quot;action&quot;:&quot;show&quot;,&quot;field&quot;:&quot;username&quot;,&quot;condition&quot;:&quot;equal&quot;,&quot;value&quot;:&quot;&quot;}]">
-                  <label for="text-2086" class="u-label">Floor *</label>
-                  <input type="text"  th:field="*{floor}" id="text-2086" name="text" class="u-grey-5 u-input u-input-rectangle u-radius u-input-3" required="required" placeholder="Enter your Email">
+                <div class="u-form-checkbox u-form-group">
+                  <input type="checkbox" id="checkbox-a30d" name="remember" value="On" class="u-field-input">
+                  <label for="checkbox-a30d" class="u-field-label" style="">Remember me</label>
                 </div>
-                <div class="u-form-group u-form-name u-form-partition-factor-2">
-                  <label for="username-a30d" class="u-label">Amount Of Rooms *</label>
-                  <input type="text" th:field="*{amountOfRooms}" placeholder="Enter your Username" id="username-a30d" name="username" class="u-grey-5 u-input u-input-rectangle u-radius u-input-4" required="">
-                </div>
-                <div class="u-form-group u-form-group-5">
-                  <label for="text-c2ef" class="u-label">Duration *</label>
-                  <input type="text" th:field="*{duration}" placeholder="Enter Your Rental Duration" id="text-c2ef" name="text-2" class="u-grey-5 u-input u-input-rectangle u-radius u-input-5" required="required">
-                </div>
-                <div class="u-form-group u-form-group-6">
-                  <label for="text-fd49" class="u-label">Properties</label>
-                  <input type="text" th:field="*{properties}" placeholder="Enter Your Estate Properties" id="text-fd49" name="text-4" class="u-grey-5 u-input u-input-rectangle u-radius u-input-6">
-                </div>
-                <div class="u-form-group u-form-group-7">
-                  <label for="text-f2df" class="u-label">Documents</label>
-                  <input type="text" placeholder="" th:field="*{documents}" id="text-f2df" name="text-3" class="u-grey-5 u-input u-input-rectangle u-radius u-input-7" >
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-8">
-                  <label for="range-4930" class="u-label">Price Per Month</label>
-                  <div class="u-input-row" data-value="100">
-                    <input value="100" th:field="*{price}" min="100" max="10000" step="1" type="range" placeholder="" id="range-4930" name="range" class="u-input u-range">
-                    <input type="number" th:field="*{price}" placeholder="" id="number-range-4930" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-9" min="100" max="10000" step="1" value="100">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-9">
-                  <label for="range-476d" class="u-label">Age Of Construction</label>
-                  <div class="u-input-row" data-value="2000">
-                    <input value="2000" th:field="*{ageOfConstruction}" min="1890" max="2025" step="1" type="range" placeholder="" id="range-476d" name="range-1" class="u-input u-range">
-                    <input type="number" th:field="*{ageOfConstruction}" placeholder="" id="number-range-476d" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-11" min="1890" max="2025" step="1" value="2000">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-number u-form-number-layout-range-number u-form-group-10">
-                  <label for="range-9d19" class="u-label">Square Meters</label>
-                  <div class="u-input-row" data-value="10">
-                    <input value="10" th:field="*{squareMeters}" min="10" max="1000" step="10" type="range" placeholder="" id="range-9d19" name="range-2" class="u-input u-range">
-                    <input type="number" placeholder="" th:field="*{squareMeters}" id="number-range-9d19" class="u-grey-5 u-input u-input-rectangle u-radius u-text-black u-input-13" min="10" max="1000" step="10" value="10">
-                  </div>
-                </div>
-                <div class="u-form-group u-form-select u-form-group-11">
-                  <label for="select-32c6" class="u-label">Type of estate</label>
-                  <div class="u-form-select-wrapper">
-                    <select id="select-32c6" th:field="*{typeOfEstate}" name="select" class="u-grey-5 u-input u-input-rectangle u-radius u-input-14">
-                      <option value="Apartment" data-calc="Apartment">Apartment</option>
-                      <option value="Detached House" data-calc="Detached House">Detached House</option>
-                      <option value="Townhouse Estate" data-calc="Townhouse Estate">Townhouse Estate</option>
-                      <option data-calc="Condominium (Condo) Estate" value="Condominium (Condo) Estate">Condominium (Condo) Estate</option>
-                    </select>
-                    <svg class="u-caret u-caret-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="fill:currentColor;" xml:space="preserve"><polygon class="st0" points="8,12 2,4 14,4 "></polygon></svg>
-                  </div>
-                </div>
-                <div class="u-form-group u-form-select u-form-group-12">
-                  <label for="select-7b09" class="u-label">Type Of Heating</label>
-                  <div class="u-form-select-wrapper">
-                      <select id="select-7b09" th:field="*{typeOfHeating}" id="typeOfHeating" class="u-grey-5 u-input u-input-rectangle u-radius u-input-15">
-                          <option value="Central Heating">Central Heating</option>
-                          <option value="District Heating">District Heating</option>
-                          <option value="Electric Heating">Electric Heating</option>
-                          <option value="Individual Room Heating">Individual Room Heating</option>
-                      </select>
-                    <svg class="u-caret u-caret-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="fill:currentColor;" xml:space="preserve"><polygon class="st0" points="8,12 2,4 14,4 "></polygon></svg>
-                  </div>
-                </div>
-                <div class="u-form-checkbox u-form-group u-form-partition-factor-2 u-form-group-13">
-                  <input type="checkbox" th:field="*{parking}" id="checkbox" name="checkbox" value="On" class="u-field-input">
-                  <label for="checkbox" class="u-field-label">Parking</label>
-                </div>
-
-                <div class="u-form-group u-form-textarea u-form-group-15">
-                  <label for="textarea-538c" class="u-label">Description</label>
-                  <textarea rows="4" th:field="*{description}" cols="50" id="textarea-538c" name="textarea" class="u-grey-5 u-input u-input-rectangle u-radius u-input-16" required=""></textarea>
-                </div>
-
                 <div class="u-align-right u-form-group u-form-submit">
-                  <a href="#" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Login</a>
-                  <input type="submit" value="submit" class="u-form-control-hidden">
+                    <button type="submit" class="u-border-none u-btn u-btn-submit u-button-style u-palette-1-light-1 u-btn-1">Login</button>
+                    <input type="submit" class="u-form-control-hidden" value="Sign In"/>
                 </div>
                 <input type="hidden" value="" name="recaptchaResponse">
               </form>
             </div>
+            <a href="#" class="u-border-active-palette-2-base u-border-hover-palette-1-base u-border-none u-btn u-button-style u-login-control u-login-create-account u-none u-text-grey-40 u-text-hover-palette-4-base u-btn-2">Don't have an account?</a>
           </div>
         </div>
       </div>
@@ -177,7 +119,7 @@
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-b81f"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+          <img  th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"> © 2025 Company. All Rights Reserved.<br>Licensed Real Estate Broker
         </p>
