--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,12 @@
 
     <div class="form-check">
         <input type="checkbox" id="owner_role" class="form-check-input" name="roleName" value="ROLE_OWNER">
-        <label for="owner_role" class="form-check-label">Do you want a owner Role?</label>
+        <label for="owner_role" class="form-check-label">Do you want an owner Role?</label>
+    </div>
+
+    <div class="form-check">
+        <input type="checkbox" id="admin_role" class="form-check-input" name="roleName" value="ROLE_ADMIN">
+        <label for="admin_role" class="form-check-label">Do you want an owner Admin?</label>
     </div>
 
 
