--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,10 +10,10 @@
         <label for="userName">User Name</label> <br>
         <input type="text" id="userName" class="form-control" th:field="*{username}">
     </div>
-    <div class="form-group">
-        <label for="email">Email</label> <br>
-        <input type="email" id="email" class="form-control" th:field="*{email}">
-    </div>
+<!--    <div class="form-group">-->
+<!--        <label for="email">Email</label> <br>-->
+<!--        <input type="email" id="email" class="form-control" th:field="*{email}">-->
+<!--    </div>-->
     <div class="form-group">
         <label for="password">Password</label> <br>
         <input type="password" id="password" class="form-control" th:field="*{password}">
