--- a/src/main/resources/templates/ApplicationForView.html
+++ b/src/main/resources/templates/ApplicationForView.html
@@ -28,7 +28,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+          <img th:src="@{/images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
@@ -73,30 +73,26 @@
         <div class="u-align-center u-container-align-center u-container-style u-group u-radius-50 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <span class="u-file-icon u-icon u-icon-circle u-palette-1-light-1 u-text-white u-icon-1">
-              <img th:src="@{images/149099-e4ea8095.png}" alt="">
+              <img th:src="@{/images/149099-e4ea8095.png}" alt="">
             </span>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"> New Application</h3>
             <div class="u-form u-login-control u-white u-form-1">
-              <form th:action="@{/applications/view}" th:object="${application}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
-                  <input type="hidden" th:field="*{tenant.id}" />
-                <div class="u-form-group u-form-name">
-                  <label for="username-a30d" class="u-label">Estate Code *</label>
-                  <input type="text" th:field="*{estateCode}" placeholder="Enter the Estate Code" id="username-a30d" name="username" class="u-grey-5 u-input u-input-rectangle u-radius u-input-1" required="">
-                </div>
-                <div class="u-form-group u-form-password">
-                  <label for="password-a30d" class="u-label">Tenant Code *</label>
-                  <input type="text" th:field="*{tenantCode}" placeholder="Enter the Tenant Code" id="password-a30d" name="password" class="u-grey-5 u-input u-input-rectangle u-radius u-input-2" required="">
-                </div>
+              <form th:action="@{/applications/view/new/{estateID}(estateID=${estate.id})}" th:object="${application}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
+                  <!-- @{/view/new/{estateID}(estateID=${estateId})}   @{/applications/view/new/{estateID}(estateID=${estate.id})}
+<input type="hidden" th:field="*{tenant.id}" value="${loggedInTenantId}"/>-->
+                  <span th:text="${estate.id}"></span>
+<!--                  <input type="hidden" th:field="*{estate.id}" value="1"/>-->
                 <div class="u-form-date u-form-group u-form-group-3">
                   <label for="date-ed38" class="u-label">Date Of Visit</label>
                   <input type="text" th:field="*{dateOfVisit}" placeholder="MM/DD/YYYY" id="date-ed38" name="date" class="u-grey-5 u-input u-input-rectangle u-radius u-input-3" required="" data-date-format="mm/dd/yyyy">
                 </div>
                 <div class="u-form-group u-form-textarea u-form-group-4">
                   <label for="textarea-9dd2" class="u-label">Description</label>
-                  <textarea th:field="*{description}" rows="4" cols="50" id="textarea-9dd2" name="textarea" class="u-grey-5 u-input u-input-rectangle u-radius u-input-4" required=""></textarea>
+                  <textarea th:field="*{description}" rows="4" cols="50" id="textarea-9dd2" name="textarea" class="u-grey-5 u-input u-input-rectangle u-radius u-input-4"></textarea>
                 </div>
                 <div class="u-align-right u-form-group u-form-submit">
                     <button type="submit" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Submit</button>
+<!--                    <a href="#" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Submit</a>-->
                     <input type="submit" value="submit" class="u-form-control-hidden">
                 </div>
                 <input type="hidden" value="" name="recaptchaResponse">
@@ -112,7 +108,7 @@
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-b81f"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+          <img th:src="@{/images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"> © 2025 Company. All Rights Reserved.<br>Licensed Real Estate Broker
         </p>
